--- a/index.html
+++ b/index.html
@@ -6,26 +6,20 @@
 </head>
 <body>
 
-<h2>TOPSIS Web Service</h2>
+  <div class="container">
+    <h2>TOPSIS Web Service</h2>
 
-<form id="topsisForm" enctype="multipart/form-data">
-  <label>CSV File</label>
-  <input type="file" name="file" required><br><br>
+    <form id="topsisForm" enctype="multipart/form-data">
+      <input type="file" name="file" required>
+      <input type="text" name="weights" placeholder="1,1,1,1" required>
+      <input type="text" name="impacts" placeholder="+,+,-,+" required>
+      <input type="email" name="email" placeholder="example@gmail.com" required>
+      <button type="submit">Submit</button>
+    </form>
 
-  <label>Weights</label>
-  <input type="text" name="weights" placeholder="1,1,1,1" required><br><br>
+    <p id="msg"></p>
+  </div>
 
-  <label>Impacts</label>
-  <input type="text" name="impacts" placeholder="+,+,-,+" required><br><br>
-
-  <label>Email</label>
-  <input type="email" name="email" required><br><br>
-
-  <button type="submit">Submit</button>
-</form>
-
-<p id="msg"></p>
-
-<script src="script.js"></script>
 </body>
+
 </html>
