--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <div class="container">
     <h2>TOPSIS Web Service</h2>
 
-    <form id="topsisForm" enctype="multipart/form-data">
+    <form id="topsisForm" method="post" enctype="multipart/form-data">
+
       <label>CSV File</label>
       <input type="file" name="file" required>
 
@@ -30,5 +31,6 @@
   </div>
 
   <script src="script.js"></script>
+
 </body>
 </html>
